--- a/elixir_lib_playground/.gitignore
+++ b/elixir_lib_playground/.gitignore
@@ -21,3 +21,22 @@ elixir_lib_playground-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
