chore: reformat code and update gitignore files

--- a/binary_search_practice/.gitignore
+++ b/binary_search_practice/.gitignore
@@ -23,4 +23,24 @@ erl_crash.dump
 binary_search_practice-*.tar
 
 # Temporary files, for example, from tests.
-/tmp/
+/tmp/   
+
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
